# lingmo-utils

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  package.yml  test.yml
cmake/: LingmoCompilerSettings.cmake  LingmoPCH.cmake  LingmoSanitizers.cmake  LingmoUtilsConfig.cmake.in
debian/: changelog  control  copyright  liblingmoutils-dev.install  liblingmoutils1.install  rules
include/LingmoUtils/: FileUtils.h  LingmoUtils.h  LingmoUtilsExport.h.in  LingmoUtilsVersion.h.in  Logger.h  Process.h  XdgUtils.h
rpm/: lingmo-utils.spec
src/: CMakeLists.txt
src/LingmoUtils/: FileUtils.cpp  Logger.cpp  Process.cpp  XdgUtils.cpp
src/LingmoUtils/private/: FileUtils_p.h  Logger_p.h  Process_p.h
tests/: CMakeLists.txt  tst_FileUtils.cpp  tst_Logger.cpp  tst_Process.cpp  tst_XdgUtils.cpp
